--- a/app/src/main/res/layout/activity_tajmahal.xml
+++ b/app/src/main/res/layout/activity_tajmahal.xml
@@ -10,16 +10,17 @@
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="411dp"
+        android:layout_height="237dp"
         android:orientation="vertical"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/tm"
+            android:id="@+id/templegold"
             android:layout_width="match_parent"
             android:layout_height="278dp"
             android:src="@drawable/tm" />
@@ -55,7 +56,7 @@
 
             <TextView
                 android:layout_width="208dp"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
                 android:gravity="end"
@@ -68,7 +69,7 @@
 
         <LinearLayout
             android:id="@+id/linearLayout6"
-            android:layout_width="416dp"
+            android:layout_width="410dp"
             android:layout_height="52dp"
             android:layout_marginEnd="50dp"
 
@@ -233,7 +234,7 @@
 
 
         <ImageView
-            android:id="@+id/m1"
+            android:id="@+id/temple1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="10sp"
@@ -243,7 +244,7 @@
             android:src="@drawable/tm1" />
 
         <ImageView
-            android:id="@+id/m2"
+            android:id="@+id/temple2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="10sp"
