--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -64,6 +64,12 @@
             android:padding="20dp"
             android:textColorHint="@color/black" />
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/firework"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:lottie_rawRes="@raw/fire" />
+
 
     </LinearLayout>
 
@@ -75,7 +81,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-       android:layout_marginBottom="130dp"
+       android:layout_marginBottom="100dp"
         app:layout_constraintVertical_bias="0.888"
         app:srcCompat="@drawable/button_home" />
 
@@ -157,12 +163,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/firework"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:lottie_rawRes="@raw/fire" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -171,15 +171,17 @@
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/booked"
             android:layout_width="211dp"
             android:layout_height="169dp"
-            android:visibility="gone"
             android:layout_marginBottom="20dp"
             android:src="@drawable/baseline_check_circle_24"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/booking"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -191,9 +193,9 @@
             android:layout_height="38dp"
             android:fontFamily="@font/avanir"
             android:text="Booking Confirmed"
-            android:visibility="gone"
             android:textColor="#26FF00"
             android:textSize="30dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/booking"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
