--- a/app/src/main/res/layout/activity_ladakh.xml
+++ b/app/src/main/res/layout/activity_ladakh.xml
@@ -20,7 +20,8 @@
         <ImageView
             android:id="@+id/ladakh"
             android:layout_width="match_parent"
-            android:layout_height="278dp"
+            android:layout_height="234dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ladakh" />
 
 
@@ -54,8 +55,8 @@
                 android:textSize="30sp" />
 
             <TextView
-                android:layout_width="244dp"
-                android:layout_height="48dp"
+                android:layout_width="170dp"
+                android:layout_height="56dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
                 android:gravity="start"
@@ -68,7 +69,7 @@
 
         <LinearLayout
             android:id="@+id/linearLayout6"
-            android:layout_width="416dp"
+            android:layout_width="410dp"
             android:layout_height="52dp"
             android:layout_marginEnd="50dp"
 
